force-app/main/default/objects/AIAssistSettings__c/AIAssistSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Org-wide operational configuration for AI Assist, editable at Org Default level only.</description>
    <label>AI Assist Settings</label>
</CustomObject>