force-app/main/default/objects/AIAssistSettings__c/fields/AIAcknowledgeEmailTemplateId__c.field-meta.xml
<CustomField>
    <fullName>AIAcknowledgeEmailTemplateId__c</fullName>
    <description>The Id of the Lightning Email Template used when sending the Usage Terms acknowledgment email.</description>
    <inlineHelpText>Enter the Id of the email template to use for the terms acknowledgment email.</inlineHelpText>
    <label>AI Acknowledge Email Template Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>