force-app/main/default/objects/AIAssistSettings__c/fields/AIProviderSuccessStatusCodes__c.field-meta.xml
<CustomField>
    <fullName>AIProviderSuccessStatusCodes__c</fullName>
    <defaultValue>&quot;200&quot;</defaultValue>
    <description>Comma-separated list of HTTP status codes the AI provider response handlers treat as a successful response. Any other non-retryable status fails the turn.</description>
    <inlineHelpText>Example: 200,201. Leave blank to fall back to the code default of 200.</inlineHelpText>
    <label>AI Provider Success Status Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>