force-app/main/default/objects/AIAssistSettings__c/fields/AIUsagePolicyUrl__c.field-meta.xml
<CustomField>
    <fullName>AIUsagePolicyUrl__c</fullName>
    <description>Link to the company AI usage policy, shown on the chat window&apos;s first-run terms screen.</description>
    <inlineHelpText>Enter the full URL of your AI usage policy. Leave blank to show the text without a link.</inlineHelpText>
    <label>AI Usage Policy URL</label>
    <type>Url</type>
</CustomField>