force-app/main/default/objects/AIAssistSettings__c/fields/AuditLoggingRecordId__c.field-meta.xml
<CustomField>
    <fullName>AuditLoggingRecordId__c</fullName>
    <description>The Id of a specific record (typically an AI Agent) to enable detailed Execution Step logging for, rather than logging every agent&apos;s activity.</description>
    <inlineHelpText>Enter the Id of the specific record you want detailed audit logging enabled for. Leave blank if no scoped logging is currently needed.</inlineHelpText>
    <label>Audit Logging Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>