force-app/main/default/objects/AIAssistSettings__c/fields/CalloutTimeoutMilliseconds__c.field-meta.xml
<CustomField>
    <fullName>CalloutTimeoutMilliseconds__c</fullName>
    <defaultValue>30000</defaultValue>
    <description>How long, in milliseconds, AIAgentManager waits for an AI provider callout before treating it as failed. Applies to every AI Model Configuration. Required - a blank value fails every AI message.</description>
    <inlineHelpText>1 - 120000 (the Apex callout limit). Must be set - a blank value fails every AI message.</inlineHelpText>
    <label>Callout Timeout Milliseconds</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>