force-app/main/default/objects/AIAssistSettings__c/fields/CurrentTermsVersion__c.field-meta.xml
<CustomField>
    <fullName>CurrentTermsVersion__c</fullName>
    <description>The current version of the AI Assist usage terms. Users who haven&apos;t acknowledged this version see the first-run terms screen in the chat window. Blank is treated as 1.0.</description>
    <inlineHelpText>Change this (for example 1.0 to 1.1) to ask every user to agree to the terms again.</inlineHelpText>
    <label>Current Terms Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>