force-app/main/default/objects/AIAssistSettings__c/fields/DefaultMaxToolCallingIterations__c.field-meta.xml
<CustomField>
    <fullName>DefaultMaxToolCallingIterations__c</fullName>
    <defaultValue>5</defaultValue>
    <description>How many tool-calling iterations AIAgentManager allows per AI message when the AI Agent&apos;s own Max Tool Calling Iterations is blank. Always clamped to Max Tool Calling Iterations Cap. Blank or below 1 falls back to the code default (5).</description>
    <inlineHelpText>Used when an AI Agent has no Max Tool Calling Iterations set. Clamped to Max Tool Calling Iterations Cap.</inlineHelpText>
    <label>Default Max Tool Calling Iterations</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>