force-app/main/default/objects/AIAssistSettings__c/fields/DefaultModelConfiguration__c.field-meta.xml
<CustomField>
    <fullName>DefaultModelConfiguration__c</fullName>
    <description>Fallback model configuration if an agent&apos;s assigned one is missing or inactive.</description>
    <inlineHelpText>Enter the Developer Name of the model configuration to fall back to.</inlineHelpText>
    <label>Default Model Configuration</label>
    <length>80</length>
    <type>Text</type>
</CustomField>