force-app/main/default/objects/AIAssistSettings__c/fields/DisableExceptionLogging__c.field-meta.xml
<CustomField>
    <fullName>DisableExceptionLogging__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, AIPlatformLogManager stops publishing AIPlatformLogEvent__e and no AIPlatformLog__c records are written.</description>
    <inlineHelpText>Turn this on only to silence AI Assist exception logging temporarily, for example during a bulk data load.</inlineHelpText>
    <label>Disable Exception Logging</label>
    <type>Checkbox</type>
</CustomField>