force-app/main/default/objects/AIAssistSettings__c/fields/DisablePlatformLogs__c.field-meta.xml
<CustomField>
    <fullName>DisablePlatformLogs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled, suppresses all AIPlatformLog__c record creation org-wide, regardless of individual exceptions occurring.</description>
    <inlineHelpText>Turn this on to stop logging exceptions entirely. Use with caution — disabling this removes visibility into failures across the whole application until turned back off.</inlineHelpText>
    <label>Disable Platform Logs</label>
    <type>Checkbox</type>
</CustomField>