force-app/main/default/objects/AIAssistSettings__c/fields/GlobalTokenBudgetPerDay__c.field-meta.xml
<CustomField>
    <fullName>GlobalTokenBudgetPerDay__c</fullName>
    <description>Org-wide daily token cap across all agents and conversations.</description>
    <inlineHelpText>Leave blank for no cap.</inlineHelpText>
    <label>Global Token Budget Per Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>