force-app/main/default/objects/AIAssistSettings__c/fields/IsApplicationActive__c.field-meta.xml
<CustomField>
    <fullName>IsApplicationActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Master switch controlling whether AI Assist is active org-wide.</description>
    <inlineHelpText>Turn this off to halt the entire application immediately, without deactivating every Agent individually.</inlineHelpText>
    <label>Is Application Active</label>
    <type>Checkbox</type>
</CustomField>