force-app/main/default/objects/AIAssistSettings__c/fields/IsExceptionLoggingEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsExceptionLoggingEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, AIPlatformLogManager publishes AIPlatformLogEvent__e for every AI Assist exception. Unchecked, no log events are published and no AIPlatformLog__c records are written.</description>
    <inlineHelpText>Turn this off only to silence AI Assist exception logging temporarily, for example during a bulk data load.</inlineHelpText>
    <label>Is Exception Logging Enabled</label>
    <type>Checkbox</type>
</CustomField>