force-app/main/default/objects/AIAssistSettings__c/fields/IsPlatformLoggingEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsPlatformLoggingEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, published AIPlatformLogEvent__e events are written to AIPlatformLog__c records. Unchecked, the events are dropped and no AIPlatformLog__c records are created org-wide.</description>
    <inlineHelpText>Use with caution - turning this off removes visibility into failures across the whole application until turned back on.</inlineHelpText>
    <label>Is Platform Logging Enabled</label>
    <type>Checkbox</type>
</CustomField>