force-app/main/default/objects/AIAssistSettings__c/fields/MaxPIIRegistryObjects__c.field-meta.xml
<CustomField>
    <fullName>MaxPIIRegistryObjects__c</fullName>
    <description>Caps how many AIPIIRegistry__c records the dispatcher will process in a single scheduled run.</description>
    <inlineHelpText>Set a ceiling to bound sync job size; matches the future-call limit per transaction.</inlineHelpText>
    <label>Maximum PII Registry Objects</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>