force-app/main/default/objects/AIAssistSettings__c/fields/MaxToolCallingIterationsCap__c.field-meta.xml
<CustomField>
    <fullName>MaxToolCallingIterationsCap__c</fullName>
    <defaultValue>20</defaultValue>
    <description>Upper bound on tool-calling iterations per AI message, applied to every AI Agent&apos;s Max Tool Calling Iterations. Every iteration makes at least one callout and Salesforce allows 100 per transaction. Blank or below 1 falls back to the code default (20).</description>
    <inlineHelpText>Hard ceiling on any AI Agent&apos;s Max Tool Calling Iterations. Keep well under 100 (the per-transaction callout limit).</inlineHelpText>
    <label>Max Tool Calling Iterations Cap</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>