force-app/main/default/objects/AIAssistSettings__c/fields/MaxToolCallsPerIteration__c.field-meta.xml
<CustomField>
    <fullName>MaxToolCallsPerIteration__c</fullName>
    <defaultValue>5</defaultValue>
    <description>How many tool calls AIAgentManager runs from a single model reply. Any extra tool calls are skipped and the model is told so. Each tool call uses SOQL queries (and callouts for some Apex Data Sources), so this keeps a turn within Salesforce governor limits. Blank or below 1 falls back to the code default (5).</description>
    <inlineHelpText>Maximum tool calls run per model reply. Extra calls are skipped.</inlineHelpText>
    <label>Max Tool Calls Per Iteration</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>