force-app/main/default/objects/AIAssistSettings__c/fields/RetryableStatusCodes__c.field-meta.xml
<CustomField>
    <fullName>RetryableStatusCodes__c</fullName>
    <defaultValue>&quot;408,429,500,502,503,504,529&quot;</defaultValue>
    <description>Comma-separated list of HTTP status codes AIAgentManager treats as retryable - a callout returning one of these, with attempts remaining, comes back as retryable instead of failing the turn.</description>
    <inlineHelpText>Example: 408,429,500,502,503,504,529. Leave blank to never retry.</inlineHelpText>
    <label>Retryable Status Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>