force-app/main/default/objects/AIAssistSettings__c/fields/ToolingAPIVersion__c.field-meta.xml
<CustomField>
    <fullName>ToolingAPIVersion__c</fullName>
    <defaultValue>&quot;62.0&quot;</defaultValue>
    <description>The Salesforce API version used when calling the Tooling API from AIPiiRegistryWorker. Update this after an org API version upgrade instead of editing code.</description>
    <inlineHelpText>Example: 62.0. Leave blank to fall back to the code default.</inlineHelpText>
    <label>Tooling API Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>